--- a/src/css/nav.module.scss
+++ b/src/css/nav.module.scss
@@ -29,7 +29,7 @@ nav{
   background-color: white;
   border-radius: 100px;
   font-family: 'Outfit', sans-serif;
-  z-index: 15;
+  z-index: 102;
   margin-left: 6vw;
 }
 
